# grant-hunter

./: .gitignore  .mcp.json  config.py  dashboard.py  eligibility.py  experiment-log.md  filters.py  grant_survey_report.md  package.json  pipeline.py  pyproject.toml  report_generator.py  scoring.py
.claude-plugin/: marketplace.json  plugin.json
.omc/scientist/: generate_figures.py
claude-plugin/: .mcp.json  package.json
collectors/: base.py  carb_x.py  eu_portal.py  gates_gc.py  google_org.py  grants_gov.py  nih.py  pasteur_network.py  right_foundation.py
data/: keywords.json
outputs/: MANIFEST.yaml
scripts/: analyze_fp_labels.py  check_uptime.py  create_calendar_events.py  evaluate_gold_set.py  extract_deadlines.py  extract_filtered_grants.py  feedback_summary.py  generate_interactive_report.py  import_feedback.py  keyword_tuning_cycle.py  pilot_haiku_vs_sonnet.py  run_pipeline.sh  runbook.md  sample_for_gold_set.py  sample_for_labeling.py  setup_cron.sh  weekly_reminder.py  weight_ablation.py
tests/: conftest.py  test_amr_filter.py  test_base_collector.py  test_classifier.py  test_collectors.py  test_dashboard.py  test_eligibility.py  test_filter_recall.py  test_filters.py  test_gold_set.py  test_grant_model_v4.py  test_keyword_audit.py  test_llm_reranker_default.py  test_models.py  test_monitoring.py  test_pipeline_anomaly_alert.py  test_pipeline_integration.py  test_pipeline_smoke.py  test_profiles.py  test_report_generator.py  test_reranker.py  test_scoring.py  test_scoring_integration.py  test_scoring_validation.py  test_server.py  test_validation.py
(+38 files in other folders)
