[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grant-hunter-mcp"
version = "1.0.0"
description = "AMR+AI Grant auto-collection system for Institut Pasteur Korea"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.11",
    "lxml>=4.9",
    "mcp>=1.0",
    "jinja2>=3.1",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
]

[project.scripts]
grant-hunter-serve = "grant_hunter.server:main"
grant-hunter-run = "grant_hunter.pipeline:main"

[tool.hatch.build.targets.wheel]
packages = ["src/grant_hunter"]

[tool.hatch.build.targets.wheel.force-include]
"src/grant_hunter/templates" = "grant_hunter/templates"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
